<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/>
    </parent>

    <name>visual-sdu</name>

    <groupId>cn.sduonline</groupId>
    <artifactId>visual-sdu</artifactId>
    <version>0.0.1</version>
    <packaging>pom</packaging>

    <modules>
        <module>vsdu-boot</module>
        <module>vsdu-business</module>
        <module>vsdu-common</module>
        <module>vsdu-infrastructure</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>25</java.version>
        <lombok.version>1.18.46</lombok.version>
    </properties>

</project>
